--- a/package.json
+++ b/package.json
@@ -9,20 +9,22 @@
     "preview": "ng serve --configuration=production"
   },
   "dependencies": {
-    "rxjs": "^7.8.2",
-    "@angular/compiler": "^21.0.0",
-    "@angular/platform-browser": "^21.0.0",
-    "@angular/core": "^21.0.0",
-    "@angular/forms": "^21.0.6",
-    "@angular/common": "^21.0.0",
-    "@supabase/supabase-js": "^2.45.0",
     "@angular/build": "^21.0.0",
     "@angular/cli": "^21.0.0",
+    "@angular/common": "^21.0.0",
+    "@angular/compiler": "^21.0.0",
     "@angular/compiler-cli": "^21.0.0",
-    "tailwindcss": "latest"
+    "@angular/core": "^21.0.0",
+    "@angular/forms": "^21.0.6",
+    "@angular/platform-browser": "^21.0.0",
+    "@supabase/supabase-js": "^2.45.0",
+    "rxjs": "^7.8.2"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
+    "autoprefixer": "^10.4.23",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^4.1.18",
     "typescript": "^5.9.0",
     "vite": "^6.2.0"
   }
