--- a/package.json
+++ b/package.json
@@ -24,8 +24,21 @@
     "@types/node": "^22.14.0",
     "autoprefixer": "^10.4.23",
     "postcss": "^8.5.6",
-    "tailwindcss": "^4.1.18",
+    "tailwindcss": "^3",
     "typescript": "^5.9.0",
     "vite": "^6.2.0"
-  }
+  },
+  "description": "<div align=\"center\"> <img width=\"1200\" height=\"475\" alt=\"GHBanner\" src=\"https://github.com/user-attachments/assets/0aa67016-6eaf-458a-adb2-6e31a0763ed6\" /> </div>",
+  "main": "index.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/GARajab/PLANNING-WL.git"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/GARajab/PLANNING-WL/issues"
+  },
+  "homepage": "https://github.com/GARajab/PLANNING-WL#readme"
 }
