--- a/package.json
+++ b/package.json
@@ -28,6 +28,9 @@
     "typescript": "^5.9.0",
     "vite": "^6.2.0"
   },
+  "engines": {
+    "node": ">=20"
+  },
   "description": "<div align=\"center\"> <img width=\"1200\" height=\"475\" alt=\"GHBanner\" src=\"https://github.com/user-attachments/assets/0aa67016-6eaf-458a-adb2-6e31a0763ed6\" /> </div>",
   "main": "index.js",
   "repository": {
